k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: devskala2-frontend
    namespace: skala3-ai1
spec:
    replicas: 1
    selector:
        matchLabels:
            app: devskala2-frontend
    template:
        metadata:
            labels:
                app: devskala2-frontend
        spec:
            containers:
                - name: frontend
                  image: amdp-registry.skala-ai.com/skala26a-ai1/devskala2-frontend
                  ports:
                      - containerPort: 80
