k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devskala2-backend
  namespace: skala26a-ai1
spec:
  selector:
    app: devskala2-backend
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
