k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devskala2-frontend
  namespace: skala3-ai1
spec:
  selector:
    app: devskala2-frontend
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
